GLUE-391 Changed transfers, renamings [skip ci]

--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,8 @@
   "description": "PaymentsRestApi module",
   "license": "proprietary",
   "require": {
+    "spryker/checkout-rest-api-extension": "^1.0.0",
+    "spryker/kernel": "^3.22.0"
   },
   "require-dev": {
     "spryker/code-sniffer": "*",
