--- a/codeception.yml
+++ b/codeception.yml
@@ -1,5 +1,7 @@
 namespace: PaymentsRestApi
 actor: Tester
+include:
+    - tests/SprykerTest/Zed/PaymentsRestApi
 paths:
     tests: tests
     log: tests/_output
