--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
   "description": "PaymentsRestApi module",
   "license": "proprietary",
   "require": {
+    "php": ">=7.1",
     "spryker/checkout-rest-api-extension": "^1.0.0",
     "spryker/kernel": "^3.22.0"
   },
