--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "spryker/checkout-rest-api-extension": "^1.3.0",
         "spryker/glue-application": "^1.0.0",
         "spryker/glue-application-extension": "^1.0.0",
-        "spryker/kernel": "^3.30.0"
+        "spryker/kernel": "^3.30.0",
+        "spryker/payment": "^5.13.0"
     },
     "require-dev": {
         "spryker/code-sniffer": "*",
