ACP-3507 the APIs to enable projects embed payment elements to headless frontends (#11043)
ACP-3507 Investigate how the APIs to Enable Projects embed Payment Elements to Yves or in Headless Scenario should be built

--- a/codeception.yml
+++ b/codeception.yml
@@ -1,5 +1,6 @@
 namespace: PaymentsRestApi
 include:
+    - tests/SprykerTest/Glue/PaymentsRestApi
     - tests/SprykerTest/Zed/PaymentsRestApi
 paths:
     tests: tests
