ACP-4455: Payone Paypal Express checkout. (#11169)
ACP-4455 Payone Paypal Express checkout.

--- a/src/Spryker/Glue/PaymentsRestApi/Validation/payments.validation.yaml
+++ b/src/Spryker/Glue/PaymentsRestApi/Validation/payments.validation.yaml
@@ -53,3 +53,16 @@ payment-cancellations:
                   fields:
                       transactionId:
                           - NotBlank
+
+payment-customers:
+    post:
+        payment:
+            - Collection:
+                  fields:
+                      paymentMethodName:
+                          - NotBlank
+                      paymentProviderName:
+                          - NotBlank
+
+        customerPaymentServiceProviderData:
+            - NotBlank
