--- a/composer.json
+++ b/composer.json
@@ -9,12 +9,14 @@
         "spryker/glue-application": "^1.0.0",
         "spryker/glue-application-extension": "^1.0.0",
         "spryker/kernel": "^3.30.0",
-        "spryker/payment": "^5.25.0",
+        "spryker/payment": "^5.27.0",
+        "spryker/payment-app": "^1.0.0",
         "spryker/symfony": "^3.17.0",
         "spryker/transfer": "^3.27.0"
     },
     "require-dev": {
         "spryker/code-sniffer": "*",
+        "spryker/container": "*",
         "spryker/testify": "*"
     },
     "autoload": {
