--- a/tests/SprykerTest/Glue/PaymentsRestApi/codeception.yml
+++ b/tests/SprykerTest/Glue/PaymentsRestApi/codeception.yml
@@ -21,3 +21,4 @@ suites:
                 - \SprykerTest\Shared\Testify\Helper\LocatorHelper
                 - \SprykerTest\Shared\Testify\Helper\DependencyHelper
                 - \SprykerTest\Zed\Testify\Helper\Business\BusinessHelper
+                - \SprykerTest\Service\Container\Helper\ContainerHelper
